# Attendance-Through-Facial-Recognition

./: .gitignore  Attendance.csv  CMakeLists.txt  README.md  anti-spoofing.py  app.py  database_connect.py  freshest_camera_frame.py  main.cpp  main.py  simple_facerec.py  test.py
templates/: attendance.html
